WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239686
fix a few ObjC memory management issues after
r291361
https://bugs.webkit.org/show_bug.cgi?id=239686
Summary
fix a few ObjC memory management issues after r291361
Devin Rousso
Reported
2022-04-22 21:41:12 PDT
.
Attachments
Patch
(3.51 KB, patch)
2022-04-22 21:54 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-04-22 21:41:34 PDT
<
rdar://problem/91008058
>
Devin Rousso
Comment 2
2022-04-22 21:54:05 PDT
Created
attachment 458202
[details]
Patch
EWS
Comment 3
2022-04-23 08:10:18 PDT
Committed
r293290
(
249915@main
): <
https://commits.webkit.org/249915@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458202
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug