fix a few ObjC memory management issues after r291361 https://bugs.webkit.org/show_bug.cgi?id=239686 <rdar://problem/91008058>

Reviewed by Eric Carlson.

* platform/ios/PlaybackSessionInterfaceAVKit.mm:
(WebCore::mediaSelectionOptions):
* platform/ios/WebAVPlayerController.h:
* platform/ios/WebAVPlayerController.mm:
(-[WebAVMediaSelectionOption localizedDisplayName]): Added.
(-[WebAVMediaSelectionOption dealloc]): Deleted.

Canonical link: https://commits.webkit.org/249915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293290 268f45cc-cd09-0410-ab3c-d52691b4dbfc